diagweave/tests/ui/set-algebra/union_duplicate_variant_name.rs
use diagweave::union;

enum AuthError {}

union! {
    enum ApiError = AuthError | {
        AuthError,
    }
}

fn main() {}